@@ -102,14 +102,14 @@ public:
 // remove it later, but for now it does serve a simple purpose.
 // Specifically, this derivation will intercept when a stimulus
 // is being changed. 
-void Another_Input::put_digital_state( bool new_state)
+void Another_Input::putDrivingState( bool new_state)
 {
 
-  bool current_state = get_digital_state();
+  bool current_state = getDrivingState();
 
-  IOPIN::put_digital_state(new_state);
+  IOPIN::putDrivingState(new_state);
 
-  if(current_state != get_digital_state()) {
+  if(current_state != getDrivingState()) {
 
     if(video)
       video->update_state();
