@@ -269,12 +269,12 @@ void CCPCON::compare_match(void)
       break;
 
     case COM_SET_OUT:
-      iopin->put_digital_state(true);
+      iopin->putDrivingState(true);
       pir_set->set_ccpif();
       break;
 
     case COM_CLEAR_OUT:
-      iopin->put_digital_state(false);
+      iopin->putDrivingState(false);
       pir_set->set_ccpif();
       break;
 
@@ -307,7 +307,7 @@ void CCPCON::pwm_match(int level)
 
   if( (value.get() & PWM0) == PWM0)
     {
-      iopin->put_digital_state(level ? true : false);
+      iopin->putDrivingState(level ? true : false);
 
       // if the level is 'high', then tmr2 == pr2 and the pwm cycle
       // is starting over. In which case, we need to update the duty
